fixed isometric logo on mobile

--- a/common/casestudy.css
+++ b/common/casestudy.css
@@ -115,7 +115,7 @@ html {
 .illustration .project-logo {
   bottom: 0px;
   color: #d14f73;
-  width: 90%;
+  width: 91%;
 }
 
 .iso2 {
